Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65239

qwebengineshutdown / qwebenginehistoryinterface tests hang on exit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.4, 5.10.1
    • 5.9.3, 5.10.0
    • WebEngine
    • None
    • macOS 10.12
    • 224acc295777ea2cf642842cebbd6df86ad2c888, a8427919c (134-based-refactor), 02b470ae6 (134-based-refactor)

      Sometimes (especially in the CI) the qwebenginehistoryinterface test (in 5.10 renamed to qwebengineshutdown) hang without any output.

      If verbose logging is enabled using:

      QTWEBENGINE_CHROMIUM_FLAGS="--v=1" ./tst_qwebengineshutdown
      

      One can see that the application is trying to revive the GPU thread again and again.

      [76822:46851:1215/191343.753288:VERBOSE1:ipc_sync_channel.cc(509)] Canceling pending sends
      [76822:48387:1215/191343.753460:VERBOSE1:ipc_sync_channel.cc(509)] Canceling pending sends
      [76822:44035:1215/191343.753874:VERBOSE1:browser_gpu_channel_host_factory.cc(125)] Failed to create channel on existing GPU process. Trying to restart GPU process.
      [76822:44035:1215/191343.753931:VERBOSE1:browser_gpu_channel_host_factory.cc(125)] Failed to create channel on existing GPU process. Trying to restart GPU process.
      [76822:46851:1215/191343.753963:VERBOSE1:ipc_sync_channel.cc(509)] Canceling pending sends
      [76822:44035:1215/191343.753980:VERBOSE1:browser_gpu_channel_host_factory.cc(125)] Failed to create channel on existing GPU process. Trying to restart GPU process.
      [76822:44035:1215/191343.754029:VERBOSE1:browser_gpu_channel_host_factory.cc(125)] Failed to create channel on existing GPU process. Trying to restart GPU process.
      

      In the attached stacktrace file, one can see that the main thread is waiting in a thread join operation, whereas an IO thread tries to recreate the GPU thread.

        1. stacktrace.txt
          65 kB
          Alexandru Croitor
        For Gerrit Dashboard: QTBUG-65239
        # Subject Branch Project Status CR V

            alexandru.croitor Alexandru Croitor
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes