Fix hanging of process when application is closed too fast

What essentially happens is that the main thread is waiting for all
other threads end, whereas an IO thread tries to recreate the
in-process GPU thread, fails, tries again, fails and so on.

The fix is to move the condition that checks that the application main
loop has not finished, earlier.

Task-number: QTBUG-65239
Change-Id: I5800d19b986657a249b1f672c95297d01f8dc11b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>